fix(Navbar): 提高 z-index

--- a/packages/navbar/style.scss
+++ b/packages/navbar/style.scss
@@ -9,6 +9,7 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
   font-size: 30px;
   color: #333;
+  z-index: 2;
   &-icon {
     height: 110px;
     width: 66px;
